# pipewire-capture

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  test_capture.py  test_portal.py
src/: error.rs  gpu.rs  lib.rs  portal.rs  stream.rs
