[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pipewire-capture"
dynamic = ["version"]  # Version comes from Cargo.toml
description = "Python library for PipeWire video capture with pre-built wheels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "qube" }
]
keywords = ["pipewire", "wayland", "screen-capture", "video", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/bquenin/pipewire-capture"
Repository = "https://github.com/bquenin/pipewire-capture"
Issues = "https://github.com/bquenin/pipewire-capture/issues"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "pipewire_capture._native"
